# ultramemory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.api  LICENSE  README.md  docker-compose.yml  install-cli-ssh-simple.ps1  install-cli-ssh.ps1  install-cli.ps1  install-cli.sh  install-ssh.sh  jarvis2.html  jarvisv1.html  pyproject.toml  ulmemory_ssh.ps1  unificada.html  univicada.html
agents/: __init__.py  auto_researcher.py  code_indexer.py  consolidator.py  consultant.py  custom_agent.py  deleter.py  heartbeat_reader.py  librarian.py  prd_generator.py  proactive.py  researcher.py  terminal.py
agents/tools/: __init__.py  base.py  codewiki_tool.py  memory_tools.py  registry.py  web_search.py
core/: __init__.py  document_processor.py  embedding_provider.py  falkordb_client.py  github_client.py  graphiti_client.py  memory.py  qdrant_client.py  redis_client.py
docker/grafana/: dashboard.json
docker/prometheus/: prometheus.yml
docs/plans/: 2026-02-16-agent-enhancement-plan.md  2026-02-16-multi-agent-system.md  2026-02-16-ultramemory-design.md  2026-02-16-ultramemory-plan.md  2026-02-16-ultramemory-prd.md
services/: __init__.py  main.py  models.py
skills/ulmemory-cli/: SKILL.md
tests/: __init__.py  test_document_processor.py  test_memory.py
ultramemory_cli/: __init__.py  agents.py  code_index.py  config.py  dashboard.py  logs.py  main.py  memory.py  metrics.py  scheduler.py  settings.py  test.py
