[project]
name = "ultramemory"
version = "0.1.0"
description = "Hybrid memory system with multi-agent CLI for AI agents"
authors = [{name = "Brandom Ledema"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pillow>=10.2.0",
    "moviepy>=1.0.3",
]

[project.scripts]
ulmemory = "ultramemory_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
